--- a/first_steps.ipynb
+++ b/first_steps.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "instructional-shannon",
    "metadata": {},
    "outputs": [
@@ -220,6 +220,39 @@
     "# Now, a is a float.\n",
     "a += b\n",
     "print(type(a), isinstance(a, float))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "expanded-america",
+   "metadata": {},
+   "source": [
+    "### Explicit type conversion\n",
+    "\n",
+    "Explicitly changing the type of a variable is easy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "behavioral-partition",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 6.7        # We initialize a as a float.\n",
+    "a = int(a)     # Now, we have converted a to an int.\n",
+    "print(a)       # We loose the non-integral part (it is cut, not rounded).\n",
+    "a = str(a)     # Now, a is a string.\n",
+    "print(type(a))"
    ]
   },
   {
@@ -722,6 +755,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "welcome-nickname",
+   "metadata": {},
+   "source": [
+    "### The same using `enumerate`\n",
+    "\n",
+    "```python\n",
+    "for index, elem in enumerate(iterator):\n",
+    "    # do something\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "knowing-instrument",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of the elements in [5] is 5.\n",
+      "The sum of the elements in [5, 3] is 8.\n",
+      "The sum of the elements in [5, 3, 2] is 10.\n",
+      "The sum of the elements in [5, 3, 2, 1] is 11.\n",
+      "The sum of the elements in [5, 3, 2, 1, 4] is 15.\n"
+     ]
+    }
+   ],
+   "source": [
+    "running_sum = 0\n",
+    "l = [5, 3, 2, 1, 4]\n",
+    "for index, elem in enumerate(l):\n",
+    "    running_sum += elem\n",
+    "    print(f'The sum of the elements in {l[:index + 1]} is {running_sum}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "animal-luther",
    "metadata": {},
    "source": [
@@ -970,6 +1042,131 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fourth-salon",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Reading files\n",
+    "\n",
+    "### Open files for reading using the `with`-`as`-statement\n",
+    "\n",
+    "```python\n",
+    "with open(filename, 'r') as fp: # Open file for reading and automatically close it at end of with-scope.\n",
+    "    for line in fp:             # Iterate through the lines of the file.\n",
+    "        pass                    # The keyword \"pass\" is a placeholder that does nothing.\n",
+    "```\n",
+    "\n",
+    "### A rudimentary parser using `string.split()` and `string.strip()`\n",
+    "\n",
+    "- Create a **dictionary** which contains the **line numbers as keys** and a **list of words in the respective lines as values** (words are defined as white-space separated tokens).\n",
+    "- **`string.strip(chars)`** returns a copy of `string` where all leading and trailing characters contained in `chars` are removed.\n",
+    "- **`string.split(char)`** returns a list of all substrings of `string`seperated by character `char`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "alive-strap",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: ['This', 'is', 'the', 'first', 'line'], 1: ['And', 'this', 'is', 'the', 'second', 'line']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "words_in_lines = {}                                   # Initialize dictionary.\n",
+    "with open('input/dummy_input.txt', 'r') as fp:        # Open input file for reading.\n",
+    "    for line_number, line in enumerate(fp):           # Iterate through lines of input file.\n",
+    "        line = line.strip('.\\n\\t ')                   # Remove leading and trailing dots, white-spaces, tabs, newlines.\n",
+    "        words_in_lines[line_number] = line.split(' ') # Split line into words and add to dictionary.\n",
+    "print(words_in_lines)                                 # Print dictionary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "instructional-whole",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Writing files\n",
+    "\n",
+    "### Write to file using the `with`-`as`-statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "automatic-shadow",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('output/dummy_output.txt', 'w') as fp: # Open file for writing.\n",
+    "    fp.write('First part of first line.')        # Write to file.\n",
+    "    fp.write(' Second part of first line.\\n')    # Write to file, create new line via '\\n'.\n",
+    "    fp.write('Second line.\\n')                   # Write to file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "mighty-glucose",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## All opening modes of the `open(filename, mode)` function\n",
+    "\n",
+    "|Mode|Description|\n",
+    "|---|---|\n",
+    "|**`'r'`**|Open or **reading** (default).|\n",
+    "|**`'w'`**|Open for **writing**. Creates a new file if it does not exist or truncates the file if it exists.|\n",
+    "|**`'x'`**|Open for **exclusive creation**. If the file already exists, the operation fails.|\n",
+    "|**`'a'`**|Open for **appending** at the end of the file without truncating it. Creates a new file if it does not exist.|\n",
+    "|**`'+'`**|Open for **updating, i.e., reading and writing**.|\n",
+    "|**`'t'`**|Open in **text** mode (default).|\n",
+    "|**`'b'`**|Open in **binary** mode.|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pharmaceutical-teaching",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## <a name=\"ex6\"></a>Exercise 6\n",
+    "\n",
+    "- Open the file `input/dummy_input.txt` and create a dictionary which, for each line, contains a list with the positions of all occurences of the character `'e'` in this line.\n",
+    "- Create a file called `output/e_occurences_in_dummy_input.txt` which, for each line in the input file, contains a line of the following form:\n",
+    "\n",
+    "```\n",
+    "Positions of character 'e' in line LINENUMBER: POS, POS, ..., POS. \n",
+    "```\n",
+    "\n",
+    "- Hint: You might find it useful to have a look at [`string.join()`](https://docs.python.org/3/library/stdtypes.html#str.join)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "tough-studio",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "advised-party",
+   "metadata": {},
+   "source": [
+    "<a href=\"#ex6sol\">Solution for Exercise 6</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ranging-confusion",
    "metadata": {},
    "source": [
@@ -1144,7 +1341,37 @@
    "id": "absent-chorus",
    "metadata": {},
    "source": [
-    "<a href=\"#ex5\">Back to Exercise 5</a>"
+    "<a href=\"#ex5\">Back to Exercise 5</a>\n",
+    "\n",
+    "<a name=\"ex6sol\">Solution for Exercise 6</a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "inappropriate-machine",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_positions_in_lines = {}\n",
+    "with open('input/dummy_input.txt') as fp:\n",
+    "    for line_number, line in enumerate(fp):\n",
+    "        e_positions_in_lines[line_number] = []\n",
+    "        for position, char in enumerate(line):\n",
+    "            if char == 'e':\n",
+    "                e_positions_in_lines[line_number].append(str(position))\n",
+    "                \n",
+    "with open('output/e_occurences_in_dummy_input.txt', 'w') as fp:\n",
+    "    for line_number, positions in e_positions_in_lines.items():\n",
+    "        fp.write(f\"Positions of character 'e' in line {line_number}: {', '.join(positions)}.\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "japanese-spine",
+   "metadata": {},
+   "source": [
+    "<a href=\"#ex6\">Back to Exercise 6</a>"
    ]
   }
  ],
