--- a/first_steps.ipynb
+++ b/first_steps.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "1. **First steps**: numbers, containers, comparisons, Boolean operations, if/else-statements, loops, I/O.\n",
     "2. **Data handling and scientific computing**: [NumPy](https://numpy.org/), [pandas](https://pandas.pydata.org/).\n",
+    "3. **Functions and classes**: create your own functions and classes.\n",
     "3. **Plotting**: [seaborn](https://seaborn.pydata.org/).\n",
     "4. **Analysis of biological data**: [Biopython](https://biopython.org/)."
    ]
