--- a/data_handling.ipynb
+++ b/data_handling.ipynb
@@ -20,23 +20,38 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## NumPy – overview\n",
+    "## Python modules and packages\n",
+    "\n",
+    "- Python files with the `.py` extension are called **modules**.\n",
+    "- Collections of related modules are called **packages**.\n",
+    "- There is a huge variety of Python packages for numerous purposed.\n",
+    "- Today, we will learn about two very widely used packages: **NumPy** and **pandas**.\n",
+    "\n",
+    "---\n",
+    "## Syntax for importing packages\n",
+    "\n",
+    "```python\n",
+    "import package                       # Import a package.\n",
+    "import package as pkg                # Import a package and assign an abbreviation to it.\n",
+    "from package import something        # Import functionality from a package.\n",
+    "from package import something as sth # Import functionality from a package and assign an abbreviation to it.\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "## NumPy: overview\n",
     "\n",
     "- Main class `ndarray` representing **multi-dimensional arrays**.\n",
     "- Provides many useful **mathematical functions**.\n",
     "- Backend implemented in **C** and **Fortran** $\\Longrightarrow$ **very fast** if only library calls are used.\n",
     "- Documentation and tutorials available [here](https://numpy.org).\n",
     "\n",
-    "### Syntax for importing packages, e.g., NumPy\n",
-    "\n",
-    "```python\n",
-    "import package as pkg\n",
-    "```"
+    "---\n",
+    "### Importing NumPy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "american-career",
    "metadata": {},
    "outputs": [],
@@ -55,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "id": "later-airport",
    "metadata": {},
    "outputs": [
@@ -64,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "a=\n",
-      "[1 2 3]\n",
+      "[1 2 3 4 5]\n",
       "\n",
       "b=\n",
       "[[1 2 3]\n",
@@ -92,11 +107,11 @@
     }
    ],
    "source": [
-    "a = np.array([1,2,3])                                # Create one-dimensional array from list.\n",
+    "a = np.array([1,2,3,4,5])                            # Create one-dimensional array from list.\n",
     "print(f'a=\\n{a}\\n')\n",
     "b = np.array([[1,2,3],[4,5,6]])                      # Create two-dimensional array from list.\n",
     "print(f'b=\\n{b}\\n')\n",
-    "print(f'b has shape {b.shape}.\\n')                     # Get shape of array.\n",
+    "print(f'b has shape {b.shape}.\\n')                   # Get shape of array.\n",
     "c = np.ones(shape=(3,2))                             # Create two-dimensional array of ones of given shape.\n",
     "print(f'c=\\n{c}\\n')\n",
     "d = np.zeros(shape=(5), dtype=int)                   # Create one-dimensional array of integer zeros.\n",
@@ -105,6 +120,99 @@
     "print(f'e=\\n{e}\\n')\n",
     "f = e.reshape(3, 2)                                  # Create array from existing array, transforming its shape.\n",
     "print(f'f=\\n{f}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "collected-subcommittee",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Indexing and slicing one-dimensional arrays\n",
+    "\n",
+    "### Syntax for indexing\n",
+    "\n",
+    "```python\n",
+    "value_at_index = array[index] # Get value at index.\n",
+    "array[index] = new_value      # Update value at index.\n",
+    "```\n",
+    "\n",
+    "### Syntax for slicing\n",
+    "\n",
+    "```python\n",
+    "array_slice = array[start:stop:step] # Get array slice.\n",
+    "array[start:stop:step] = new_slice   # Update array slice.\n",
+    "```\n",
+    "\n",
+    "- **Default `start=0`**: If `start` is omitted, we start at the beginning.\n",
+    "- **Default `end=len(array)`**: If `end` is omitted, we end at the last element.\n",
+    "- **Default `step=1`**: If `step` is omitted, we use a step-size of 1.\n",
+    "\n",
+    "### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ahead-vision",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1, 100,   3, 101,   5])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[1:5:2] = [100, 101]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "planned-network",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Exercise 1\n",
+    "\n",
+    "Create an integer array of zeros with length 20. Change the first 5 values to 10. Change the next 10 values to a sequence starting at 12 and increasing with steps of 2 to 40 (do this with one command). Set the final 5 values to 30. Print the string `'The second but last entry in the array is <ENTRY>.'`, using an f-String."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "heavy-state",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The second but last entry in the array is 40.\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = np.zeros(shape=20, dtype=int)\n",
+    "array[:5] = 10\n",
+    "array[5:15] = np.arange(start=12, stop=31, step=2)\n",
+    "array[15:] = 40\n",
+    "print(f'The second but last entry in the array is {array[-2]}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fantastic-monthly",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Solutions to exercises"
    ]
   }
  ],
