--- a/first_steps.ipynb
+++ b/first_steps.ipynb
@@ -1043,6 +1043,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "provincial-region",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## List, dictionary, and set comprehension\n",
+    "\n",
+    "- One of the nicest features in Python.\n",
+    "- Construct lists, dictionaries, or sets via `for`-loops in just one line.\n",
+    "- **Syntax for lists:** `l = [EXPRESSION for item in iterable if CONDITION]`\n",
+    "- **Syntax for dictionaries:** `l = {KEY_EXPRESSION: VALUE_EXPRESSION for item in iterable if CONDITION}`\n",
+    "- **Syntax for sets:** `l = {EXPRESSION for item in iterable if CONDITION}`\n",
+    "\n",
+    "### Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "trying-meeting",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, False, True, False, True, False, True, False]\n",
+      "{'0': True, '1': False, '2': True, '3': False, '4': True, '5': False, '6': True, '7': False, '8': True, '9': False}\n",
+      "{0, 1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_numbers = list(range(10))                        # Some numbers. \n",
+    "is_even = [i % 2 == 0 for i in my_numbers if i < 8] # List specifying whether numbers smaller than 8 are even or odd.\n",
+    "print(is_even)\n",
+    "is_odd = {str(i): i % 2 == 1 for i in my_numbers}   # Dict containing string representations as keys and is-odd-flag as values.\n",
+    "print(is_odd)\n",
+    "int_division_by_two = {i // 2 for i in my_numbers}  # All possible results of integer divisions by 2.\n",
+    "print(is_even)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fourth-salon",
    "metadata": {},
    "source": [
@@ -1057,16 +1100,17 @@
     "        pass                    # The keyword \"pass\" is a placeholder that does nothing.\n",
     "```\n",
     "\n",
-    "### A rudimentary parser using `string.split()` and `string.strip()`\n",
+    "### A rudimentary parser using `string.split()` , `string.strip()`, and `string.join()`\n",
     "\n",
     "- Create a **dictionary** which contains the **line numbers as keys** and a **list of words in the respective lines as values** (words are defined as white-space separated tokens).\n",
     "- **`string.strip(chars)`** returns a copy of `string` where all leading and trailing characters contained in `chars` are removed.\n",
-    "- **`string.split(char)`** returns a list of all substrings of `string`seperated by character `char`."
+    "- **`string.split(char)`** returns a list of all substrings of `string`seperated by character `char`.\n",
+    "- **`string.join(list)`** returns a string where all elements of `list` are concatenated with `string`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "alive-strap",
    "metadata": {
     "scrolled": true
@@ -1076,7 +1120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: ['This', 'is', 'the', 'first', 'line'], 1: ['And', 'this', 'is', 'the', 'second', 'line']}\n"
+      "{0: ['This', 'is', 'the', 'first', 'line'], 1: ['And', 'this', 'is', 'the', 'second', 'line']}\n",
+      "This-is-the-first-line\n"
      ]
     }
    ],
@@ -1086,7 +1131,8 @@
     "    for line_number, line in enumerate(fp):           # Iterate through lines of input file.\n",
     "        line = line.strip('.\\n\\t ')                   # Remove leading and trailing dots, white-spaces, tabs, newlines.\n",
     "        words_in_lines[line_number] = line.split(' ') # Split line into words and add to dictionary.\n",
-    "print(words_in_lines)                                 # Print dictionary."
+    "print(words_in_lines)                                 # Print dictionary.\n",
+    "print('-'.join(words_in_lines[0]))                    # Now print a string where all words in the first "
    ]
   },
   {
