--- a/data_handling.ipynb
+++ b/data_handling.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# Data Handling and Scientific Computing in Python 3\n",
     "    \n",
-    "*David B. Blumenthal*"
+    "*David B. Blumenthal, Olga Lazareva*"
    ]
   },
   {
