--- a/first_steps.ipynb
+++ b/first_steps.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "# First Steps in Python 3\n",
     "    \n",
-    "*David B. Blumenthal*"
+    "*David B. Blumenthal, Olga Lazareva*"
    ]
   },
   {
